       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.

In 0.10:
--------
  patchlevel 23:
       - support for KDE SOUND EVENTS.
         raises: 
                  "Window Iconify"
                  "Window DeIconify"
                  "Window Maximize"
                  "Window UnMaximize"
                  "Window Sticky"
                  "Window UnSticky"
                  "Window New"
                  "Window Delete"
                  "Window New Trans"
                  "Window Delete Trans"
                  "Logout"
                  "Logout Message"

      Also passes KDE_SOUND_EVENT, KDE_REGISTER_SOUND_EVENT and
      KDE_UNREGISTER_SOUND_EVENT to the modules. REGISTER-events are
      stored. That means it is possible to launch the sound module after
      the applications without losing any registered sound-event.

 
       - fix for the session management proxy (Gerd Knorr)

  patchlevel 22:
       - fixes for the screen-shading during logout. The old way had
         severe problems with backing store. (Christian Czezatke)
       - support for shaped window decorations:
                ShapeMode=on
                ShapePixmapTop=...
                ShapePixmapBottom=...
                ShapePixmapLeft=...
                ShapePixmapRight=...
                ShapePixmapTopLeft=...
                ShapePixmapTopRight=...
                ShapePixmapBottomLeft=...
                ShapePixmapBottomRight=...
         There are some (ugly) example pixmaps under ./images

       - made the taskwindow look a little bit nicer, including their
	 mini icons (Mario Weilguni)

  patchlevel 21: